# xorg-gtest

./: .gitignore  COPYING  Makefile.am  README  autogen.sh  configure.ac  xorg-gtest.pc.in
aclocal/: Makefile.am  xorg-gtest.m4
data/: Makefile.am
data/X11/xorg.conf.d/: 99-virtual-test-devices.conf
data/xorg/gtest/: dummy.conf
doc/: Doxyfile  Doxyfile.in  Makefile.am
examples/: Makefile.am  xorg-gtest-environment-example.cpp  xorg-gtest-example.cpp  xorg-gtest.cpp
gtest/: Makefile.am  README
gtest/include/: Makefile.am
gtest/src/: gtest-all.cc
include/: Makefile.am  environment.h  fixture.h
include/xorg/gtest/: environment.h  process.h  test.h  xorg-gtest-environment.h  xorg-gtest-process.h  xorg-gtest-test.h  xorg-gtest-xserver.h  xorg-gtest.h  xorg-gtest_device.h  xorg-gtest_environment.h  xorg-gtest_process.h  xorg-gtest_test.h
include/xorg/gtest/emulated/: xorg-gtest-device.h  xorg-gtest-driver-connection.h  xorg-gtest-valuators.h
include/xorg/gtest/evemu/: xorg-gtest-device.h  xorg-gtest_device.h
m4/: gtest.m4
src/: Makefile-xorg-gtest.am  Makefile.am  defines.h  device.cpp  emulated-device.cpp  emulated-driver-connection.cpp  environment.cpp  libxorg-gtest.ver  libxorg-gtest_main.ver  main.cpp  process.cpp  test.cpp  valuators.cpp  xorg-gtest-all.cpp  xorg-gtest_main.cpp  xserver.cpp
test/: .gitignore  Makefile.am  device-test.cpp  process-test-helper.cpp  process-test.cpp  xserver-test-helper.cpp  xserver-test.cpp
